# zws

./: .gitignore  Cargo.toml  README.md  index.html  macos-brew-openssl-extra.txt
benches/: server_bench.rs
binaries/: zws-0.2.0-mac64
src/: cache.rs  error.rs  handlers.rs  lib.rs  mcache.rs  request.rs  response.rs  server.rs  tls.rs  workers.rs
src/server/: mod.rs
webroot/: index.html
webroot/test/: index.html
