[package]
name = "zws"
version = "0.1.0"
authors = ["Jose Colon Rodriguez <jec.rod@gmail.com>"]
edition = "2018"

[dependencies]
openssl = "~0.10"
solicit = "~0.4"
seahash = "~3.0"
notify = "~4.0"
log = "~0.4"
env_logger = "~0.6"
docopt = "~1.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "server_bench"
harness = false
